--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Om Token</title>
+  <title>Om Ecosystem</title>
   <link rel="shortcut icon" type="image/png" href="OmToken.gif">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
