--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         &nbsp
   </div>
   <div id="intro">
-        <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Om Ecosystem Comming Soon&nbsp</h2>
+        <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Om Swap Comming Soon&nbsp</h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://t.me/OmTokenOrg" style="color: white;"><i class="fab fa-telegram" style="font-size: 2em;"></i></a>
     &nbsp
